--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.44.0",
